@@ -1,0 +1,11 @@
+#!/bin/bash
+
+if [ "$ARQROOT" == "" ]
+then
+    echo "ARQROOT not set" 1>&2
+    exit 1
+    fi
+
+CP="$($ARQROOT/bin/arq_path)"
+
+java $SOCKS -cp "$CP" arq.update "$@"
